# statistical_missteps

./: .codespellrc  .gitignore  .pre-commit-config.yaml  Applying algebra to regression.ipynb  CITATION.cff  Misinterpreting R-squared.ipynb  README.md  Regressing on transformed variables.ipynb  Statistics pitfalls.ipynb  apt.txt  pyproject.toml  requirements.txt
