[project]
name = "Statistical-missteps"
version = "1.0"
description = "Statistical missteps we make in reservoir characterization."
authors = [
    {name = "Frank Male", email = "frank.male@psu.edu"},
]
dependencies = [
    "numpy==1.18.*", 
    "matplotlib==3.1.*", 
    "pandas==1.0.*", 
    "scipy==1.4.*", 
    "seaborn==0.10.0", 
    "statsmodels==0.11.0",
]
requires-python = ">=3.9"
license = {text = "GPLv3"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
